--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://claudiucreanga.me" # the base hostname & protocol for your site
 twitter_username: ClaudiuCreanga
 github_username:  ClaudiuCreanga
+permalink: none
 
 # Build settings
 markdown: kramdown
