--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://claudiucreanga.github.io" # the base hostname & protocol for your site
 twitter_username: ClaudiuCreanga
 github_username:  ClaudiuCreanga
+google_site_verification: "CKTpWWiKkwRo1F65mWc-qVHYiMesfIsRVPvc1_NrSKc"
 permalink: none
 
 # Build settings
@@ -13,3 +14,5 @@ exclude: [vendor]
 future: true
 gems:
   - jekyll-sitemap
+plugins:
+  - jekyll-seo-tag
