--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Claudiu Creanga
-description: Claudiu Creanga - Software Engineer. Working primarily with python, php and javascript.
+description: Claudiu Creanga - Machine Learning Research Scientist.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://claudiucreanga.github.io" # the base hostname & protocol for your site
 twitter_username: ClaudiuCreanga
