--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Claudiu Creanga
 description: Claudiu Creanga - Machine Learning Research Scientist.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://claudiucreanga.github.io" # the base hostname & protocol for your site
+url: "https://claudiucreanga.github.io" # the base hostname & protocol for your site
 twitter_username: ClaudiuCreanga
 github_username:  ClaudiuCreanga
 google_site_verification: "Pe47J1U-2tEpQ1UnRgzKFYmSzrXkm7N7Kh3j9f5tx8o"
